--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   "dependencies": {
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-decorators": "^1.3.1"
+    "ember-decorators": "^1.3.1",
+    "ember-mapbox-gl": "^0.8.7",
+    "ember-composability-tools": "0.0.8",
+    "ember-fetch": "^3.3.1",
+    "ember-truth-helpers": "^2.0.0",
+    "ember-promise-helpers": "^1.0.3"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -38,7 +43,8 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "mapbox-gl": "^0.41.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
