--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ember-composability-tools": "0.0.8",
     "ember-fetch": "^3.3.1",
     "ember-truth-helpers": "^2.0.0",
-    "ember-promise-helpers": "^1.0.3"
+    "ember-promise-helpers": "^1.0.3",
+    "mapbox-gl": "^0.41.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -43,8 +44,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
-    "loader.js": "^4.2.3",
-    "mapbox-gl": "^0.41.0"
+    "loader.js": "^4.2.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
