--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   "dependencies": {
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-decorators": "^1.3.1",
-    "ember-mapbox-gl": "^0.8.7",
     "ember-composability-tools": "0.0.8",
+    "ember-decorators": "^1.3.1",
     "ember-fetch": "^3.3.1",
-    "ember-truth-helpers": "^2.0.0",
+    "ember-mapbox-gl": "^0.8.7",
     "ember-promise-helpers": "^1.0.3",
+    "ember-truth-helpers": "^2.0.0",
     "mapbox-gl": "^0.41.0"
   },
   "devDependencies": {
+    "@turf/union": "^4.7.3",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
+    "ember-browserify": "^1.2.0",
     "ember-cli": "~2.15.1",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
