--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-jane-maps",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
@@ -20,12 +20,12 @@
   "dependencies": {
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-decorators": "^1.3.1",
-    "ember-mapbox-gl": "^0.8.7",
     "ember-composability-tools": "0.0.8",
+    "ember-decorators": "^1.3.1",
     "ember-fetch": "^3.3.1",
-    "ember-truth-helpers": "^2.0.0",
+    "ember-mapbox-gl": "0.9.0",
     "ember-promise-helpers": "^1.0.3",
+    "ember-truth-helpers": "^2.0.0",
     "mapbox-gl": "^0.44.1"
   },
   "devDependencies": {
